<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">電卓式ダメージ計算機(β)</string>
  <string name="action_settings">Settings</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_stats_calculator">ステータス計算</string>
  <string name="button0">0</string>
  <string name="button1">1</string>
  <string name="button2">2</string>
  <string name="button3">3</string>
  <string name="button4">4</string>
  <string name="button5">5</string>
  <string name="button6">6</string>
  <string name="button7">7</string>
  <string name="button8">8</string>
  <string name="button9">9</string>
  <string name="buttonNext">次</string>
  <string name="buttonPrev">前</string>
  <string name="buttonClear">C</string>
  <string name="buttonCalc">計算</string>
  <string name="buttonPeriod">.</string>
  <string name="textViewMovePower">威力</string>
  <string name="textViewAttackPower">攻撃</string>
  <string name="textViewDefensePower">防御</string>
  <string name="textViewAttackBonus">一致</string>
  <string name="textViewTypeMatchUp">相性</string>
  
  <string name="textViewAttackAbility">攻撃側特性</string>
  <string name="textViewDefenseAbility">防御側特性</string>
  
  <string name="textViewAttackItem">攻撃側持物</string>
  <string name="textViewDefenseItem">防御側持物</string>
  
  <string name="textViewField">その他</string>
  
  <string name="checkBoxHelpingHand">手助け</string>
  <string name="checkBoxBurn">やけど</string>
  <string name="checkBoxPlusWeather">天候+</string>
  <string name="checkBoxReflect">壁</string>
  <string name="checkBoxDoubleDamage">全体技</string>
  <string name="checkBoxMinusWeather">天候-</string>
  
  <string name="ability">特性</string>
  <string name="item">持物</string>
  
  <string name="random">乱数</string>
  <string name="damage">ダメージ</string>
  <string name="crit">急所</string>
  <string name="calcResult">計算結果</string>
  
  <string name="textViewPokemonName">ポケモン名</string>
  <string name="textViewBaseStats">種族値</string>
  <string name="textViewBaseStatsValues">%1$d–%2$d–%3$d–%4$d–%5$d–%6$d</string>
  <string name="textViewStats">能力値</string>
  <string name="textViewStatsValues">%1$d–%2$d–%3$d–%4$d–%5$d–%6$d</string>
  <string name="textViewLevel">レベル</string>
  <string name="textViewIndividualValue">個体値</string>
  <string name="textViewEffortValue">努力値</string>
  <string name="textViewNature">性格</string>
  <string name="textViewPlus">+</string>
  <string name="textViewMinus">–</string>
  
  <string name="garchomp">ガブリアス</string>
  <string name="toString">%1$d</string>
  
  <string name="statsCalculatorToastMessage">努力値をロングタップで代入できます。</string>
  
  <string-array name="attackAbilities">
    <item>なし</item>
    <item>【鉄の拳】：威力1.2倍[捨て身]</item>
    <item>【ちからずく】：威力1.3倍[砂の力,アナライズ,スキン]</item>
    <item>【硬い爪】：威力1.3倍</item>
    <item>【テクニシャン】：威力1.5倍[熱暴走,毒暴走,頑丈顎,メガランチャー]</item>
    <item>【猛火】：攻撃1.5倍[新緑,激流,虫の知らせ,根性,もらい火,サンパワー,フラワーギフト]</item>
    <item>【ヨガパワー】：攻撃2倍[力持ち]</item>
    <item>【スナイパー】：急所ダメージ1.5倍</item>
    <item>【色眼鏡】：悪相性ダメージ2倍</item>
  </string-array>
  <string-array name="defenseAbilities">
    <item>なし</item>
    <item>【耐熱】：ダメージ0.5倍</item>
    <item>【乾燥肌】：威力1.25倍</item>
    <item>【厚い脂肪】：攻撃0.5倍[よわき,スロースタート]</item>
    <item>【ふしぎな鱗】：防御1.5倍</item>
    <item>【マルチスケイル】：HPMAX時にダメージ0.5倍</item>
    <item>【ハードロック】：抜群ダメージ0.75倍[フィルター]</item>
  </string-array>
  <string-array name="attackItems">
    <item>なし</item>
    <item>【力の鉢巻】：威力1.1倍[ものしり眼鏡]</item>
    <item>【プレート】：威力1.2倍</item>
    <item>【ジュエル】：威力1.3倍</item>
    <item>【鉢巻・眼鏡】：攻撃1.5倍</item>
    <item>【太い骨】：攻撃2倍</item>
    <item>【達人の帯】：抜群ダメージ1.2倍</item>
    <item>【命の珠】：ダメージ1.3倍</item>
  </string-array>
  <string-array name="defenseItems">
    <item>なし</item>
    <item>【進化の輝石】：防御1.5倍[突撃チョッキ]</item>
    <item>【深海の鱗】：特防2倍</item>
    <item>【半減の実】：ダメージ0.5倍</item>
  </string-array>
  
  

</resources>